--- a/app/templates/post.html
+++ b/app/templates/post.html
@@ -1,4 +1,5 @@
 {% extends "base.html"%}
+{% block title %}{{ post.title }} - Viva La Vida{% endblock title %}
 {% block main %}
 <div class="posts-expand">
 	<article style="display:block;">
