--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block title %}404 - Viva La Vida{% endblock title %}
 {% block head %}
 {{ super() }}
 <link href="//fonts.googleapis.com/css?family=Lato:100" rel="stylesheet" type="text/css">
