--- a/app/templates/archives.html
+++ b/app/templates/archives.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block title %}归档 - Viva La Vida{% endblock title %}
 {% import "_macros.html" as macros %}
 {% block main %}
 <div class="posts-block archive">
