--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,4 +1,5 @@
 {% extends "base.html"%}
+{% block title %}首页 - Viva La Vida{% endblock title%}
 {% import "_macros.html" as macros %}
 {% block main %}
 <div class="posts-expand">
