--- a/app/templates/tag.html
+++ b/app/templates/tag.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block title %}{{tag.name}} - Viva La Vida{% endblock title %}
 {% block main %}
 <div class="posts-block">
 <div class="posts-collapse">
