--- a/app/templates/tags.html
+++ b/app/templates/tags.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block title %}标签 - Viva La Vida{% endblock title %}
 {% block head%}
 {{ super() }}
 <style type="text/css">
